# template-rust-backend

./: .gitattributes  .gitignore  Cargo.toml  README.md
.sqlx/: query-0285ae1b83dc1e2077b8aba979e1e12e5f6ee05f793aa07c0cdcd2fa6c427d71.json  query-68073fb4815dab309c28f17975118c972075006a19ea5abe544dc1643a0f338c.json
migrations/: 20241220154213_init.sql
src/: crud_service.rs  db.rs  handlers.rs  main.rs  models.rs
