[package]
name = "crud"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls"] }
validator = { version = "0.16", features = ["derive"] }
thiserror = "1.0"
tower-http = { version = "0.3", features = ["trace"] }
